--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<body style="background-color: black;">Hello World</body>
+<html>
+    <head>
+        <link rel="stylesheet" href="~/css/site.css" />
+    </head>
+    <body style="background-color: black;">Hello World</body>
+</html>
