--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
     <head>
         <link rel="stylesheet" href="~/css/site.css" />
     </head>
-    <body style="background-color: black;">Hello World</body>
+    <body>Hello World</body>
 </html>
