--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
+<!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="~/css/site.css" />
+        <link rel="stylesheet" href="css/site.css" />
     </head>
     <body>Hello World</body>
 </html>
