--- a/index.html
+++ b/index.html
@@ -46,5 +46,5 @@
             </div>
         </div>
     </body>
-    <script src="css/bootstrap/js/bootstrap.bundle.min"></script>
+    <script src="css/bootstrap/js/bootstrap.bundle.min.js"></script>
 </html>
