--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
                     <div class="row mb-5">
                         <div class="col">
                             <div ng-hide="ViewLevelEditor" class="content-container">
-                                <div>Hello World!</div>
+                                <div class="header">The Header</div>
+                                <div class="content">The Content</div>
                             </div>
                         </div>
                     </div>
