--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<div ng-include="'_header.html'"></div>
+<div ng-include="'header.html'"></div>
     <div ng-controller="IndexController" ng-init="init()">
         <div class="container-fluid main-content">
             <div style="margin-top: 30rem;"></div>
@@ -44,4 +44,4 @@
             </div>
         </footer>
     </div>
-<div ng-include="'_footer.html'"></div>
+<div ng-include="'footer.html'"></div>
