--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-<div ng-include="'header.html'"></div>
+<!DOCTYPE html>
+<html ng-app="portfolioApp">
+    
+    <div ng-include="'header.html'"></div>
     <div ng-controller="IndexController" ng-init="init()">
         <div class="container-fluid main-content">
             <div style="margin-top: 30rem;"></div>
