--- a/header.html
+++ b/header.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html ng-app="portfolioApp">
+<!--<!DOCTYPE html>
+<html ng-app="portfolioApp">-->
     <head>
         <link rel="stylesheet" href="css/bootstrap/css/bootstrap.min.css" />
         <link rel="stylesheet" href="css/site.css" />
