--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html ng-app="portfolioApp">
-    
+
     <div ng-include="'header.html'"></div>
     <div ng-controller="IndexController" ng-init="init()">
         <div class="container-fluid main-content">
@@ -47,4 +47,12 @@
             </div>
         </footer>
     </div>
-<div ng-include="'footer.html'"></div>
+    
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
+        <script src="css/bootstrap/js/bootstrap.bundle.min.js"></script>
+        <script type="text/javascript" src="js/pages/main.js"></script>
+        <script type="text/javascript" src="js/pages/header.js"></script>
+        <script type="text/javascript" src="js/pages/index.js"></script>
+        <script type="text/javascript" src="js/site.js"></script>
+    </body>
+</html>
