--- a/leveleditor.html
+++ b/leveleditor.html
@@ -1,1 +1,4 @@
-<img src="images/leveleditor/mainwindow.png" />
+<div class="header">The Level Editor</div>
+<div class="content">
+    <img src="images/leveleditor/mainwindow.png" />
+</div>
